# docs/swagger.json
@@ -32,6 +32,13 @@
                         "name": "upload",
                         "in": "formData",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "JSON configuration data",
+                        "name": "config",
+                        "in": "formData",
+                        "required": true
                     }
                 ],
                 "responses": {
